--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,6 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
