--- a/src/app/components/auth/register/register.html
+++ b/src/app/components/auth/register/register.html
@@ -36,7 +36,7 @@
       <!-- Nombre -->
       <div class="mb-4">
         <label for="name" class="block text-sm font-medium text-gray-700 mb-2">
-          Nombre completo
+          Nombre
         </label>
         <input
           type="text"
@@ -44,13 +44,36 @@
           formControlName="name"
           class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-amber-500 focus:border-transparent transition"
           [class.border-red-500]="name?.invalid && name?.touched"
-          placeholder="Juan Pérez"
+          placeholder="Juan"
         />
         @if (name?.invalid && name?.touched){
         <div class="mt-1">
           @if (name?.errors?.['required']){
           <p class="text-xs text-red-500">El nombre es requerido</p>
           } @if (name?.errors?.['minlength']){
+          <p class="text-xs text-red-500">Mínimo 3 caracteres</p>
+          }
+        </div>
+        }
+      <!-- Apellido -->
+      </div>
+      <div class="mb-4">
+        <label for="lastName" class="block text-sm font-medium text-gray-700 mb-2">
+          Apellido
+        </label>
+        <input
+          type="text"
+          id="lastName"
+          formControlName="lastName"
+          class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-amber-500 focus:border-transparent transition"
+          [class.border-red-500]="lastName?.invalid && lastName?.touched"
+          placeholder="Pérez"
+        />
+        @if (lastName?.invalid && lastName?.touched){
+        <div class="mt-1">
+          @if (lastName?.errors?.['required']){
+          <p class="text-xs text-red-500">El apellido es requerido</p>
+          } @if (lastName?.errors?.['minlength']){
           <p class="text-xs text-red-500">Mínimo 3 caracteres</p>
           }
         </div>
