--- a/src/app/components/ver-perfil/ver-perfil.component.html
+++ b/src/app/components/ver-perfil/ver-perfil.component.html
@@ -30,28 +30,28 @@
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-        <label class="block font-medium text-gray-700">Nombre
+        <label class="block font-medium text-gray-800 text-lg">Nombre
           <input type="text" [(ngModel)]="usuario.us_nombre" name="nombre"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm" disabled>
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm" disabled>
         </label>
 
-        <label class="block font-medium text-gray-700">Apellido
+        <label class="block font-medium text-gray-800 text-lg">Apellido
           <input type="text" [(ngModel)]="usuario.us_apellido" name="apellido"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm" disabled>
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm" disabled>
         </label>
 
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-        <label class="block font-medium text-gray-700">Correo
+        <label class="block font-medium text-gray-800 text-lg">Correo
           <input type="text" [(ngModel)]="usuario.us_email" name="email"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm bg-gray-100 cursor-not-allowed" disabled>
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm bg-gray-100 cursor-not-allowed text-sm" disabled>
         </label>
 
-        <label class="block font-medium text-gray-700">Contacto
+        <label class="block font-medium text-gray-800 text-lg">Contacto
           <input type="text" [(ngModel)]="usuario.us_contacto" name="telefono"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm" disabled>
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm" disabled>
         </label>
 
       </div>
@@ -60,14 +60,14 @@
         <button
             type="button"
             (click)="editando = true"
-            class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 transition">
+            class="bg-orange-600 text-white px-5 py-2 rounded-lg hover:bg-orange-700 transition">
             Editar
         </button>
 
         <button
             type="button"
             (click)="salir()"
-            class="bg-red-600 text-white px-5 py-2 rounded-lg hover:bg-red-700 transition">
+            class="bg-gray-300 text-black px-5 py-2 rounded-lg hover:bg-gray-400 transition">
             Salir
         </button>
         </div>
@@ -80,28 +80,28 @@
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-        <label class="block font-medium text-gray-700">Nombre
+        <label class="block font-medium text-gray-700 text-lg">Nombre
           <input type="text" [(ngModel)]="usuario.us_nombre" name="nombre"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm">
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm">
         </label>
 
-        <label class="block font-medium text-gray-700">Apellido
+        <label class="block font-medium text-gray-700 text-lg">Apellido
           <input type="text" [(ngModel)]="usuario.us_apellido" name="apellido"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm">
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm">
         </label>
 
       </div>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
 
-        <label class="block font-medium text-gray-700">Correo (No editable)
+        <label class="block font-medium text-gray-700 text-lg">Correo (No editable)
           <input type="email" [(ngModel)]="usuario.us_email" name="email"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm bg-gray-200 cursor-not-allowed" disabled>
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm bg-gray-200 cursor-not-allowed text-sm" disabled>
         </label>
 
-        <label class="block font-medium text-gray-700">Contacto
+        <label class="block font-medium text-gray-700 text-lg">Contacto
           <input type="text" [(ngModel)]="usuario.us_contacto" name="telefono"
-                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm">
+                 class="mt-1 w-full border-gray-300 rounded-md shadow-sm text-sm">
         </label>
 
       </div>
@@ -109,7 +109,7 @@
       <div class="flex justify-end gap-3 mt-4">
         <button type="button"
                 (click)="guardar()"
-                class="bg-green-600 text-white px-5 py-2 rounded-lg hover:bg-green-700 transition">
+                class="bg-orange-600 text-white px-5 py-2 rounded-lg hover:bg-orange-700 transition">
           Guardar
         </button>
 
