--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -11,7 +11,7 @@
                     </svg>
                 </div>
                 <div>
-                    <h1 class="text-2xl font-bold text-gray-800">PetFinder</h1>
+                    <h1 class="text-2xl font-bold text-gray-800">PetSociety</h1>
                     <p class="text-xs text-gray-500">Encuentra a tu mejor amigo</p>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     <span class="font-medium">Crear Publicación</span>
                 </button>
                 <!-- Ver foros -->
-                 <button (click)="viewForos()" routerLinkActive="bg-orange-100 text-orange-600"
+                <button (click)="viewForos()" routerLinkActive="bg-orange-100 text-orange-600"
                     [routerLinkActiveOptions]="{exact: false}"
                     class="flex items-center space-x-2 px-4 py-2 rounded-lg transition text-gray-600 hover:bg-gray-50 hover:text-orange-600">
                     <span class="font-medium">Foros</span>
