--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -3,7 +3,7 @@
         <div class="flex items-center justify-between">
 
             <!-- Logo y título (Click lleva al home) -->
-            <div class="flex items-center space-x-3 cursor-pointer" routerLink="/home">
+            <div class="flex items-center space-x-3 cursor-pointer" routerLink="/">
                 <div class="bg-gradient-to-br from-orange-400 to-orange-600 p-2 rounded-xl">
                     <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
